--- a/public/css/vertical-layout-light/style.css
+++ b/public/css/vertical-layout-light/style.css
@@ -28380,9 +28380,9 @@ div.tagsinput span.tag a {
   margin-bottom: 2rem;
 }
 
-.auth .brand-logo img {
-  width: 150px;
-}
+/* .auth .brand-logo img {
+  width: 70px;
+} */
 
 .auth form .form-group {
   margin-bottom: 1.5rem;
